add remove from fav controller
